Completed RobotKeyInjector! Also improved TestFrame providing access to the Injection system